# siren

./: .gitignore  .pre-commit-config.yaml  .pytest.ini  .ruff.toml  README.md  infer.py  infer_other_methods.py  params.yaml  params_other_methods.yaml  pyproject.toml
other_methods/: README.md  error.py  my_types.py  params.py  time_it.py  triangulation.py
other_methods/gfi/: gfi.py  gfi_unstructured.py  main.py
other_methods/os_modi/: bounds.py  main.py  os_modi.py  os_modi_unstructured.py
paper_related_codes/: create_subdomains.py  gradient.py  gradp_jhtdb.py  gradp_jhtdb_params.py  material_acc_jhtdb.py  mesh.py  run_multiple_other_methods.bash  run_multiple_siren.bash  taylor_green_vortex.py
src/: checkpoint.py  datasets.py  dtos.py  early_stopping.py  hyperparameters.py  initialization.py  losses.py  main.py  metrics.py  model.py  my_types.py  read_data.py  running.py  tensorboard_tracker.py  timeit_decorator.py  tracking.py  vector_ops.py
tests/: test_checkpoint.py  test_datasets.py  test_early_stopping.py  test_integration.py  test_model.py  test_read_data.py  test_running.py  test_tensorboard_tracker.py
